bugfix: wrong source path

--- a/build.xml
+++ b/build.xml
@@ -109,7 +109,7 @@
     <target name="create-appserver-dist-rpm" depends="prepare-appserver-dist" description="Creates a RPM package with appserver sources">
         <!-- create the .rpm file -->
         <exec dir="${target.dir}" executable="rpmbuild" failonerror="true">
-            <arg line="--buildroot ${build.dir}/re -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
+            <arg line="--buildroot ${target.dir} -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
         </exec>
     </target>
 
@@ -141,7 +141,7 @@
 
         <!-- create the .rpm file -->
         <exec dir="${target.dir}" executable="rpmbuild" failonerror="true">
-            <arg line="--buildroot ${build.dir}/re -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
+            <arg line="--buildroot ${target.dir} -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
         </exec>
     </target>
 
