moved suffix out of version number

--- a/build.default.properties
+++ b/build.default.properties
@@ -23,11 +23,13 @@ build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
 # ---- appserver source ---------------------------------------------------------
 appserver.src.version = 0.11.0
-appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}.zip
+appserver.src.suffix = ""
+appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.0-alpha.14
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz
+appserver.runtime.version = 1.0.0
+appserver.runtime.suffix = -alpha.14
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.suffix}${build.name.suffix}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
