bugfix: wrong empty string

--- a/build.default.properties
+++ b/build.default.properties
@@ -23,7 +23,7 @@ build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
 # ---- appserver source ---------------------------------------------------------
 appserver.src.version = 0.11.0
-appserver.src.suffix = ""
+appserver.src.suffix =
 appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
