--- a/build.default.properties
+++ b/build.default.properties
@@ -24,12 +24,19 @@ build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 # ---- appserver source ---------------------------------------------------------
 appserver.src.version = 0.11.0
 appserver.src.suffix =
-appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.suffix}.zip
+# RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
+# so KEEP EMPTY IF SUFFIX IS EMPTY
+appserver.src.version.combinator =
+appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
 appserver.runtime.version = 1.0.0
-appserver.runtime.suffix = -alpha.14
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.suffix}${build.name.suffix}.tar.gz
+# Suffix is used to mark versions as alpha, beta, etc. set it to e.g. "alpha.XX" to do so, leave empty otherwise
+appserver.runtime.suffix = alpha.14
+# RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
+# so KEEP EMPTY IF SUFFIX IS EMPTY
+appserver.runtime.version.combinator = -
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
