upload for special build dir

--- a/build.default.properties
+++ b/build.default.properties
@@ -21,12 +21,16 @@ build.server.user = build
 build.server.host = appserver.io
 build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
+# Specific SCP settings as we have a strange build dir on Fedora ----------------
+package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
+
 # ---- appserver source ---------------------------------------------------------
 appserver.src.version = 0.11.0
 appserver.src.suffix =
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
 appserver.src.version.combinator =
+appserver.src.package = ${build.name.prefix}src-${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}${build.name.suffix}
 appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
@@ -36,7 +40,8 @@ appserver.runtime.suffix = alpha.14
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
 appserver.runtime.version.combinator = -
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}.tar.gz
+appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
