--- a/build.xml
+++ b/build.xml
@@ -76,7 +76,7 @@
         </move>
 
         <!-- install dependencies via composer and let postinstall-scripts proceed -->
-        <exec dir="${target.dir}/opt/appserver" executable="php">
+        <exec dir="${target.dir}/opt/appserver" executable="${target.dir}/opt/appserver/bin/php">
             <arg line="${temp.dir}/composer.phar install --prefer-dist --quiet --no-interaction --ignore-platform-reqs"/>
         </exec>
         <!-- create deploy folder if not exists -->
@@ -118,12 +118,12 @@
     <!-- ==================================================================== -->
     <target name="create-appserver-runtime-rpm" depends="prepare">
         <!-- get runtime in specific version as tar.gz -->
-        <get src="${appserver.runtime.url}" dest="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
-        <untar src="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
+        <get src="${appserver.runtime.url}" dest="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
+        <untar src="${temp.dir}/${appserver.runtime.package}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
         <mkdir dir="${target.dir}/opt" />
         <exec executable="tar">
             <arg value="-xzf"/>
-            <arg value="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
+            <arg value="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
             <arg value="-p"/>
             <arg value="-C"/>
             <arg value="${target.dir}/opt"/>
@@ -152,7 +152,11 @@
         <echo message="Now try to upload all builds to file-server"/>
         <exec executable="sh" failonerror="true">
             <arg value="-c" />
-            <arg value="scp -o StrictHostKeyChecking=no -i ${user.home}/.ssh/id_rsa ${build.dir}/* ${build.server.user}@${build.server.host}:${build.server.upload-path}" />
+            <arg value="scp -o StrictHostKeyChecking=no -i ${user.home}/.ssh/id_rsa ${package.specific.dir}/${appserver.src.package}.rpm ${build.server.user}@${build.server.host}:${build.server.upload-path}" />
+        </exec>
+        <exec executable="sh" failonerror="true">
+            <arg value="-c" />
+            <arg value="scp -o StrictHostKeyChecking=no -i ${user.home}/.ssh/id_rsa ${package.specific.dir}/${appserver.runtime.package}.rpm ${build.server.user}@${build.server.host}:${build.server.upload-path}" />
         </exec>
     </target>
 
