--- a/build.default.properties
+++ b/build.default.properties
@@ -13,9 +13,10 @@
 env.BUILD_NUMBER = ${user.name}_${time.stamp}
 
 # ---- build settings - ---------------------------------------------------------
+os.architecture = x86_64
 build.number = ${env.BUILD_NUMBER}
 build.name.prefix = appserver-
-build.name.suffix = .linux.fedora.x86_64
+build.name.suffix = .linux.fedora.${os.architecture}
 build.name.ext = rpm
 build.server.user = build
 build.server.host = appserver.io
