some minor changes to the build properties

--- a/build.default.properties
+++ b/build.default.properties
@@ -16,7 +16,7 @@ env.BUILD_NUMBER = ${user.name}_${time.stamp}
 os.architecture = x86_64
 build.number = ${env.BUILD_NUMBER}
 build.name.prefix = appserver-
-build.name.suffix = .linux.fedora.${os.architecture}
+build.name.suffix = .linux.fedora
 build.name.ext = rpm
 build.server.user = build
 build.server.host = appserver.io
@@ -31,7 +31,7 @@ appserver.src.suffix =
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
 appserver.src.version.combinator =
-appserver.src.package = ${build.name.prefix}src-${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}${build.name.suffix}
+appserver.src.package = ${build.name.prefix}dist-${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}${build.number}${build.name.suffix}
 appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
@@ -41,7 +41,7 @@ appserver.runtime.suffix = alpha.16
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
 appserver.runtime.version.combinator = -
-appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}
+appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}.${os.architecture}
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
