--- a/build.default.properties
+++ b/build.default.properties
@@ -31,7 +31,7 @@ appserver.src.suffix =
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
 appserver.src.version.combinator =
-appserver.src.package = ${build.name.prefix}dist-${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}${build.number}${build.name.suffix}.${os.architecture}
+appserver.src.package = ${build.name.prefix}dist-${appserver.src.version}-${appserver.src.suffix}${build.number}${build.name.suffix}.${os.architecture}
 appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
 
 # ---- appserver runtime --------------------------------------------------------
