minor bugfixed for build suffixes

--- a/build.default.properties
+++ b/build.default.properties
@@ -26,11 +26,11 @@ build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 
 # ---- appserver source ---------------------------------------------------------
-appserver.src.version = 0.11.0
-appserver.src.suffix =
+appserver.src.version = 1.0.0
+appserver.src.suffix = beta
 # RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
 # so KEEP EMPTY IF SUFFIX IS EMPTY
-appserver.src.version.combinator =
+appserver.src.version.combinator = -
 appserver.src.package = ${build.name.prefix}dist-${appserver.src.version}-${appserver.src.suffix}${build.number}${build.name.suffix}.${os.architecture}
 appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
 
