--- a/build.default.properties
+++ b/build.default.properties
@@ -10,7 +10,7 @@
 
 # ---- env settings -------------------------------------------------------------
 # The BUILD_NUMBER is provided by Jenkins, if we are in a local environment username will used instead
-env.BUILD_NUMBER = ${user.name}_${time.stamp}
+env.BUILD_NUMBER = ${user.name}-${time.stamp}
 
 # ---- build settings - ---------------------------------------------------------
 os.architecture = x86_64
@@ -22,17 +22,17 @@ build.server.user = build
 build.server.host = appserver.io
 build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
+# ---- github settings ----------------------------------------------------------
+github.oauth = 604a3b5943228e434a5b52c2ba3cf72286d30db9
+
 # Specific SCP settings as we have a strange build dir on Fedora ----------------
 package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 
 # ---- appserver source ---------------------------------------------------------
-appserver.src.version = 0.11.0
-appserver.src.suffix =
-# RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
-# so KEEP EMPTY IF SUFFIX IS EMPTY
-appserver.src.version.combinator =
-appserver.src.package = ${build.name.prefix}dist-${appserver.src.version}-${appserver.src.suffix}${build.number}${build.name.suffix}.${os.architecture}
-appserver.src.url = https://github.com/appserver-io/appserver/archive/${appserver.src.version}${appserver.src.version.combinator}${appserver.src.suffix}.zip
+# appserver.src.version will be obtained by cloning the github repository and reading out the lastest tag.
+# you can set a version by your own to build a specific dist version
+# appserver.src.version = your.specific.version
+appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
 appserver.runtime.version = 1.0.0
