integrating appserver version filtering

--- a/build.default.properties
+++ b/build.default.properties
@@ -29,7 +29,7 @@ github.oauth = 604a3b5943228e434a5b52c2ba3cf72286d30db9
 package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 
 # ---- appserver source ---------------------------------------------------------
-# appserver.src.version will be obtained by cloning the github repository and reading out the lastest tag.
+# appserver.src.version will be obtained by cloning the github repository and reading out the latest tag
 # you can set a version by your own to build a specific dist version
 # appserver.src.version = your.specific.version
 appserver.src.repo = appserver-io/appserver
