updated to combined build process

--- a/build.default.properties
+++ b/build.default.properties
@@ -35,14 +35,8 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.0
-# Suffix is used to mark versions as alpha, beta, etc. set it to e.g. "alpha.XX" to do so, leave empty otherwise
-appserver.runtime.suffix = alpha.16
-# RPM versions or release suffixes are not allowed to include the "-" symbol, we still need it for the download though
-# so KEEP EMPTY IF SUFFIX IS EMPTY
-appserver.runtime.version.combinator = -
-appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}${appserver.runtime.version.combinator}${appserver.runtime.suffix}${build.name.suffix}.${os.architecture}
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
+appserver.runtime.version = 1.0.0-alpha.16
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.${os.architecture}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
