--- a/build.xml
+++ b/build.xml
@@ -7,7 +7,7 @@
 
     <!-- Generate a timestamp to time.stamp property -->
     <tstamp>
-        <format property="time.stamp" pattern="yyyy-MM-dd-HHmmss"/>
+        <format property="time.stamp" pattern="yyyy.MM.dd.HHmmss"/>
     </tstamp>
 
     <!-- Readin build property files -->
@@ -71,15 +71,9 @@
             <arg line="clone https://${github.oauth.token}:x-oauth-basic@github.com/${appserver.src.repo} appserver-src" />
         </exec>
         <!-- get lastest tag version -->
-        <exec dir="${temp.dir}/appserver-src" executable="git" outputProperty="appserver.src.tmp-version">
+        <exec dir="${temp.dir}/appserver-src" executable="git" outputProperty="appserver.src.version">
             <arg line="describe --abbrev=0 --tags" />
         </exec>
-
-        <antcallback target="filter-version">
-            <param name="param1" value="This is a normal line that doesn't say much"/>
-        </antcallback>
-        <echo>a = ${allUpperCase}</echo>
-
         <echo message="Checkout lastest tag version ${appserver.src.version}" />
         <!-- checkout lastest tag version -->
         <exec dir="${temp.dir}/appserver-src" executable="git">
@@ -107,14 +101,20 @@
     <!-- Creates a RPM package with the appserver sources                     -->
     <!-- ==================================================================== -->
     <target name="create-appserver-dist-rpm" depends="prepare-appserver-dist" description="Creates a RPM package with appserver sources">
+
+        <!-- split up the version string -->
+        <filter-version param="${appserver.src.version}" />
+        <property name="appserver.src.semver" value="${RESULT_VERSION}" />
+        <property name="appserver.src.suffix" value="${RESULT_BUILD-NUMBER}" />
+
         <!-- copy packaging build files to target -->
-        <copy todir="${target.dir}">
+        <copy todir="${target.dir}/src">
             <fileset dir="${src.dir}/dist">
                 <include name="**/*"/>
                 <exclude name="rpmbuild/**"/>
             </fileset>
         </copy>
-        <copy todir="${target.dir}">
+        <copy todir="${target.dir}/src">
             <fileset dir="${src.dir}/dist">
                 <include name="rpmbuild/**"/>
             </fileset>
@@ -122,9 +122,10 @@
                 <expandproperties/>
             </filterchain>
         </copy>
+
         <!-- create the .rpm file -->
         <exec dir="${target.dir}" executable="rpmbuild" failonerror="true">
-            <arg line="--buildroot ${target.dir}/src -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
+            <arg line="--buildroot ${target.dir}/src -bb ${target.dir}/src/rpmbuild/SPECS/appserver.spec"/>
         </exec>
     </target>
 
@@ -133,19 +134,24 @@
     <!-- ==================================================================== -->
     <target name="create-appserver-runtime-rpm" depends="prepare">
         <!-- get runtime in specific version as tar.gz -->
-        <get src="${appserver.runtime.url}" dest="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
-        <untar src="${temp.dir}/${appserver.runtime.package}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
+        <get src="${appserver.runtime.url}" dest="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
+        <untar src="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
         <mkdir dir="${target.dir}/opt" />
         <exec executable="tar">
             <arg value="-xzf"/>
-            <arg value="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
+            <arg value="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
             <arg value="-p"/>
             <arg value="-C"/>
             <arg value="${target.dir}/opt"/>
         </exec>
 
+        <!-- split up the version string -->
+        <filter-version param="${appserver.runtime.version}" />
+        <property name="appserver.runtime.semver" value="${RESULT_VERSION}" />
+        <property name="appserver.runtime.suffix" value="${RESULT_BUILD-NUMBER}" />
+
         <!-- copy packaging build files to target -->
-        <copy todir="${target.dir}">
+        <copy todir="${target.dir}/runtime">
             <fileset dir="${src.dir}/runtime">
                 <include name="rpmbuild/**"/>
             </fileset>
@@ -156,18 +162,18 @@
 
         <!-- create the .rpm file -->
         <exec dir="${target.dir}" executable="rpmbuild" failonerror="true">
-            <arg line="--buildroot ${target.dir} -bb ${target.dir}/rpmbuild/SPECS/appserver.spec"/>
+            <arg line="--buildroot ${target.dir} -bb ${target.dir}/runtime/rpmbuild/SPECS/appserver.spec"/>
         </exec>
     </target>
 
-    <target name="filter-version">
-        <property name="param" value="1.0.0-beta"/>
-
-        <!-- using Javascript functions to convert the string -->
-        <script language="javascript"> <![CDATA[
-
-        // getting the param
-        var param = project.getProperty("foo");
+    <!-- ==================================================================== -->
+    <!-- Will split a string at the "-" character                             -->
+    <!-- ==================================================================== -->
+    <scriptdef name="filter-version" language="javascript">
+        <attribute name="param"/>
+        <![CDATA[
+       // getting the param
+        var param = attributes.get("param");
 
         // preset the return values
         var resultVersion = param;
@@ -176,20 +182,15 @@
         // split if necessary
         if (param.indexOf("-") !== -1) {
 
-            resultVersion = param.substring(0, param.indexOf("-"));
-            resultBuildNumber = param.substring(param.indexOf("-"), str.length - 1);
+           resultVersion = param.substring(0, param.indexOf("-"));
+           resultBuildNumber = param.replace(resultVersion + "-", "");
         }
 
-        // store the result in a new property
-        project.setProperty("result.version",resultVersion);
-        project.setProperty("result.build-number",resultBuildNumber);
-
-    ]]> </script>
-
-        <!-- Display the values -->
-        <echo>resultVersion=${result.version}</echo>
-        <echo>resultBuildNumber=${result.build-number}</echo>
-    </target>
+        // store the result in new properties
+        project.setProperty("RESULT_VERSION", resultVersion);
+        project.setProperty("RESULT_BUILD-NUMBER", resultBuildNumber);
+    ]]>
+    </scriptdef>
 
     <!-- ==================================================================== -->
     <!-- Moves the freshly built files from the RPM build directory to the    -->
@@ -197,8 +198,8 @@
     <!-- ==================================================================== -->
     <target name="move-build-files">
         <!-- move the files -->
-        <move file="${package.specific.dir}/${appserver.src.package}.rpm" todir="${build.dir}" failonerror="true"/>
-        <move file="${package.specific.dir}/${appserver.runtime.package}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${build.name.prefix}dist-${appserver.src.semver}-${appserver.src.suffix}.${build.number}${build.name.suffix}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${build.name.prefix}runtime-${appserver.runtime.semver}${appserver.runtime.suffix}${build.name.suffix}.rpm" todir="${build.dir}" failonerror="true"/>
     </target>
 
     <!-- ==================================================================== -->
