--- a/build.xml
+++ b/build.xml
@@ -243,8 +243,8 @@
     <!-- ==================================================================== -->
     <target name="move-build-files" depends="prepare-src-version-parts, prepare-runtime-version-parts">
         <!-- move the files -->
-        <move file="${package.specific.dir}/${build.name.prefix}dist-${appserver.src.semver}-${appserver.src.suffix}.${build.number}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
-        <move file="${package.specific.dir}/${build.name.prefix}runtime-${appserver.runtime.semver}${appserver.runtime.suffix}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${build.name.prefix}dist-${appserver.src.version}.${build.number}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
     </target>
 
     <!-- ==================================================================== -->
