removed calling home + new runtime version

--- a/build.default.properties
+++ b/build.default.properties
@@ -35,17 +35,9 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.0-alpha.16
+appserver.runtime.version = 1.0.0-beta.18
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.${os.architecture}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
 appserver.apps.example.url = http://apps.appserver.io/example/example-${appserver.apps.example.version}.phar
-
-# ---- universal analytics related properties to count installations ------------
-analytics.base.url = https://ssl.google-analytics.com/collect
-analytics.dist.property-id = UA-42386171-2
-analytics.runtime.property-id = UA-42386171-3
-analytics.user.agent = Mozilla/5.0 (X11; Fedora Linux ${os.architecture}; rv:31.0) Gecko/20100101 Firefox/31.0
-analytics.app.id = linux.fedora
-analytics.app.installer = ${os.architecture}
