--- a/build.default.properties
+++ b/build.default.properties
@@ -35,7 +35,7 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.0-beta.18
+appserver.runtime.version = 1.0.0-beta1.20
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.${os.architecture}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
