--- a/build.default.properties
+++ b/build.default.properties
@@ -19,7 +19,7 @@ build.name.prefix = appserver-
 build.name.suffix = .linux.fedora
 build.name.ext = rpm
 build.server.user = build
-build.server.host = appserver.io
+build.server.host = bernade.appserver.io
 build.server.upload-path = /var/www/builds.appserver.io/linux/fedora/
 
 # ---- github settings ----------------------------------------------------------
