--- a/build.xml
+++ b/build.xml
@@ -118,7 +118,8 @@
                 <expandproperties/>
             </filterchain>
         </copy>
-
+        <!-- make the binaries executable -->
+        <chmod perm="755" dir="${target.dir}/src/opt/appserver/bin" includes="appserver*"/>
         <!-- create the .rpm file -->
         <exec dir="${target.dir}" executable="rpmbuild" failonerror="true">
             <arg line="--buildroot ${target.dir}/src -bb ${target.dir}/src/rpmbuild/SPECS/appserver.spec"/>
