--- a/build.default.properties
+++ b/build.default.properties
@@ -36,7 +36,8 @@ appserver.src.repo = appserver-io/appserver
 # ---- appserver runtime --------------------------------------------------------
 appserver.runtime.version = 1.0.0
 appserver.runtime.build = 29
-appserver.runtime.url = http://builds.appserver.io/linux/fedora/${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version}.${os.architecture}.tar.gz
+appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version}.${os.architecture}
+appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
 # ---- appserver webapp pre-deployment ------------------------------------------
 appserver.apps.example.version = latest
