--- a/build.xml
+++ b/build.xml
@@ -131,12 +131,12 @@
     <!-- ==================================================================== -->
     <target name="create-appserver-runtime-rpm" depends="prepare, prepare-runtime-version-parts">
         <!-- get runtime in specific version as tar.gz -->
-        <get src="${appserver.runtime.url}" dest="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
-        <untar src="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
+        <get src="${appserver.runtime.url}" dest="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
+        <untar src="${temp.dir}/${appserver.runtime.package}.tar.gz" dest="${target.dir}/opt" compression="gzip" />
         <mkdir dir="${target.dir}/opt" />
         <exec executable="tar">
             <arg value="-xzf"/>
-            <arg value="${temp.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.tar.gz"/>
+            <arg value="${temp.dir}/${appserver.runtime.package}.tar.gz"/>
             <arg value="-p"/>
             <arg value="-C"/>
             <arg value="${target.dir}/opt"/>
@@ -246,8 +246,8 @@
     <!-- ==================================================================== -->
     <target name="move-build-files" depends="prepare-src-version-parts, prepare-runtime-version-parts">
         <!-- move the files -->
-        <move file="${package.specific.dir}/${build.name.prefix}dist-${appserver.src.version}.${build.number}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
-        <move file="${package.specific.dir}/${build.name.prefix}runtime-${appserver.runtime.version}${build.name.suffix}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${build.name.prefix}dist-${build.number}${appserver.src.suffix}.${os.version}.${os.architecture}.rpm" todir="${build.dir}" failonerror="true"/>
+        <move file="${package.specific.dir}/${appserver.runtime.package}.rpm" todir="${build.dir}" failonerror="true"/>
     </target>
 
     <!-- ==================================================================== -->
