changed handling of box name

--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -10,3 +10,6 @@
 # ---- Vagrant specific directories ---------------------------------------------
 vagrant.basedir = /vagrant
 vagrant-build.dir = ${vagrant.basedir}/build
+
+# ---- Vagrant box settings -----------------------------------------------------
+vagrant-box.name = appserverTestFedora20
