--- a/tests/Vagrantfile
+++ b/tests/Vagrantfile
@@ -12,11 +12,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   # Basic network configuration
   config.vm.network "private_network", ip: "127.0.0.11"
-  config.vm.host_name = "appserverTestFedora20"
+  config.vm.host_name = "${vagrant-box.name}"
 
   # Shell provisioning
   config.vm.provision "shell", path: "provision.sh"
 
   # Share the build folder as read only
   config.vm.synced_folder "${build.dir}", "/vagrant/build", mount_options: ["ro"]
+
+  config.vm.define :${vagrant-box.name} do |t|
+    end
 end
