added creation of tmp directory within vagrant environment

--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -10,6 +10,8 @@
 # ---- Vagrant specific directories ---------------------------------------------
 vagrant.basedir = /vagrant
 vagrant-build.dir = ${vagrant.basedir}/build
+vagrant-temp.dir = ${vagrant.basedir}/tmp
+
 
 # ---- Vagrant box settings -----------------------------------------------------
 vagrant-box.name = appserverTestFedora20
