extended testing functionality

--- a/build.default.properties
+++ b/build.default.properties
@@ -13,6 +13,7 @@
 env.BUILD_NUMBER = ${user.name}_${time.stamp}
 
 # ---- build settings - ---------------------------------------------------------
+appserver-base.dir = /opt/appserver
 os.architecture = x86_64
 build.number = ${env.BUILD_NUMBER}
 build.name.prefix = appserver-
