--- a/tests/tests.default.properties
+++ b/tests/tests.default.properties
@@ -7,6 +7,9 @@
 # @author    Bernhard Wick <bw@appserver.io>
 #--------------------------------------------------------------------------------
 
+# ---- Test base dir -------------- ---------------------------------------------
+test.basedir = .
+
 # ---- Vagrant specific directories ---------------------------------------------
 vagrant.basedir = /vagrant
 vagrant-build.dir = ${vagrant.basedir}/build
