--- a/build.default.properties
+++ b/build.default.properties
@@ -35,8 +35,8 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.4
-appserver.runtime.build = 44
+appserver.runtime.version = 1.1.0
+appserver.runtime.build = 49.alpha2
 appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version}.${os.architecture}
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
