--- a/build.default.properties
+++ b/build.default.properties
@@ -30,12 +30,12 @@ package.specific.dir = /root/rpmbuild/RPMS/${os.architecture}/
 # ---- appserver source ---------------------------------------------------------
 # appserver.src.version will be obtained by cloning the github repository and reading out the latest tag
 # you can set a version by your own to build a specific dist version
-# appserver.src.version = your.specific.version
+appserver.src.version = 1.0.3
 appserver.src.repo = appserver-io/appserver
 
 # ---- appserver runtime --------------------------------------------------------
-appserver.runtime.version = 1.0.4
-appserver.runtime.build = 44
+appserver.runtime.version = 1.0.5
+appserver.runtime.build = 50
 appserver.runtime.package = ${build.name.prefix}runtime-${appserver.runtime.version}-${appserver.runtime.build}.${os.version}.${os.architecture}
 appserver.runtime.url = http://builds.appserver.io/linux/fedora/${appserver.runtime.package}.tar.gz
 
